  - Fixed possible ArrayIndexOutOfBounds when searching for regular
    expressions that start with \<
  - The RESearchMatcher class converted \t to the tab character and \n
    to the newline character, even if the replace string was a BeanShell
    script, in which case a BeanShell execution error would occur.
- In the help viewer, nodes in the tree were not selected as links were
  followed

+ API Changes

- New methods in jEdit class for accessing properties:
  jEdit.getIntegerProperty(String name, int def);
  jEdit.setIntegerProperty(String name, int value);
  jEdit.getFontProperty(String name);
  jEdit.getFontProperty(String name, Font def);
  jEdit.setFontProperty(String name, Font value);
  jEdit.getColorProperty(String name);
  jEdit.getColorProperty(String name, Color def);
  jEdit.setColorProperty(String name, Color value);
- VariableGridLayout is now used to lay out tool bars, instead of
  BoxLayout. This means it is no longer necessary to add a
  Box.createGlue() to the tool bar to prevent it from being centered.
- Removed these APIs, which have been deprecated since jEdit 2.6:
  EditPlugin.createMenuItems(View,Vector,Vector) (override
  createMenuItems(Vector) instead)
  GUIUtilities.loadMenuItem(View,String) (use loadMenuItem(String)
  instead)
  GUIUtilities.loadToolBarIcon() (use loadIcon instead)
  GUIUtilities.showFileDialog() (use showVFSFileDialog() instead)
- Removed these APIs, which have been deprecated since jEdit 3.0:
  jEdit.addAction()
  EditAction.actionPerformed()
  EditAction.isSelected(Component)
  EditAction.getView(EventObject)
  EditAction.getBuffer(EventObject)
- CreateDockableWindow class deprecated. Write a dockables.xml file
  instead of listening for this message.
- DockableWindow interface deprecated. No need to implement it any more.
- EditBus named list stuff deprecated. It was only being used for
  dockables and ErrorList's error sources. To register dockables, use